--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=35555
 relative.which.currency=USD
-app.id=d42c3bea26794c5481a73f38d632322c
+exchange.app.id=d42c3bea26794c5481a73f38d632322c
+gif.app.id=ENV5UkBdNnuZyJhqmW1gBg5GLpt0KTb2
 exchange.rate.url=https://openexchangerates.org/api
-gif.rich.url=https://giphy.com/search/rich
-gif.broke.url=https://giphy.com/search/broke
+gif.url=https://api.giphy.com/v1/gifs
 feign.client.config.default.connectTimeout= 160000000
 feign.client.config.default.readTimeout= 160000000
 
