--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ exchange.app.id=d42c3bea26794c5481a73f38d632322c
 gif.app.id=ENV5UkBdNnuZyJhqmW1gBg5GLpt0KTb2
 exchange.rate.url=https://openexchangerates.org/api
 gif.url=https://api.giphy.com/v1/gifs
-feign.client.config.default.connectTimeout= 160000000
-feign.client.config.default.readTimeout= 160000000
+hours.ago=24
+feign.client.config.default.connectTimeout=160000000
+feign.client.config.default.readTimeout=160000000
 
